# saniflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml
.atl/: skill-registry.md
.engram/: manifest.json
.github/workflows/: ci.yml
app/: audit.py  config.py  main.py  mcp_server.py  metrics.py
app/api/: auth.py  rate_limit.py  routes.py  schemas.py
app/models/: extraction.py  findings.py
app/pipeline/: orchestrator.py  preprocessing.py
app/pipeline/detectors/: base.py  gliner_pii.py  text_pii.py  visual.py
app/pipeline/detectors/recognizers/: __init__.py  es_address.py  es_dob.py  es_iban.py  es_person.py  es_phone.py
app/pipeline/extractors/: __init__.py  base.py  document.py  image.py  pdf.py  spreadsheet.py  structured.py  text.py
app/pipeline/sanitizers/: base.py  document.py  image.py  pdf.py  spreadsheet.py  structured.py  text.py
tests/: conftest.py  test_api.py  test_audit.py  test_configurable_redaction.py  test_csv_format.py  test_docx_format.py  test_extended_formats.py  test_file_formats.py  test_gliner_detection.py  test_html_format.py  test_json_format.py  test_mcp_server.py  test_metrics_and_logging.py  test_ods_format.py  test_odt_format.py  test_pipeline.py  test_preprocessing.py  test_recognizers.py  test_rtf_format.py  test_span_map.py  test_xlsx_format.py
