[project]
name = "saniflow"
version = "0.1.0"
description = "Sanitization pipeline for PII detection and redaction in documents and images"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.8.0",
    "pydantic-settings>=2.7.0",
    "mcp>=1.0.0",
]

[project.scripts]
saniflow-mcp = "app.mcp_server:main"

[project.optional-dependencies]
gliner = ["gliner>=0.2.0"]
spreadsheet = ["openpyxl>=3.0.0"]
documents = ["python-docx>=0.8.11", "striprtf>=0.0.26", "odfpy>=1.4.0"]
structured = ["beautifulsoup4>=4.12.0"]
all-formats = ["saniflow[spreadsheet,documents,structured]"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "openpyxl>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "striprtf>=0.0.26",
    "odfpy>=1.4.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow running",
    "integration: marks integration tests",
]
